# rt_check

./: .gitignore  README.md  install.sh  pyproject.toml  run.sh
rt_check/: constants.py  git_commit_tracker.py  jira_issue_tracker.py  main.py
